Fix mutually exclusive field wrapping when in a question

--- a/src/components/field/_field.scss
+++ b/src/components/field/_field.scss
@@ -20,6 +20,10 @@
     margin-top: -1rem;
   }
 
+  &__items {
+    display: block;
+  }
+
   &__item {
     display: inline-block;
     position: relative;
